Fix overflow errors on bundle entries

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@ body {
   background: radial-gradient(farthest-corner, #3a0e46 0%, #203 100%);
   font-family: verdana, sans-serif;
   font-size: 75%;
+  margin-bottom: 80px;
 }
 
 #top-bar {
@@ -18,6 +19,7 @@ body {
 }
 
 .playing-icon {
+  flex-shrink: 0;
   width: 32px;
   height: 32px;
   border-radius: 16px;
@@ -55,6 +57,7 @@ body {
   left:0;
   background:rgba(0,0,0,.5);
   z-index: 2;
+  height: 64px;
 }
 
 .app-tab {
@@ -62,6 +65,7 @@ body {
   width:10%;
   text-align:center;
   padding:16px;
+  font-size: 300%;
 }
 
 .app-tab.selected {
@@ -100,15 +104,12 @@ body {
 }
 
 .banner.now {
-  padding: 0 32px;
-}
-
-.flex-expand {
-  flex-grow: 1;
+  padding: 0 16px;
 }
 
 .vote-button {
   flex-grow: 0;
+  flex-shrink: 0;
   width: 20%;
   text-align: center;
   line-height: 64px;
@@ -166,7 +167,10 @@ body {
   width:48px;
   height: 48px;
   border-radius: 4px;
-  margin: 0 2ch;
+  margin: 0 8px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .artist {
@@ -174,15 +178,16 @@ body {
 }
 
 .details-wrapper {
+  position: relative;
+  padding-left: 64px;
   color: #333;
   flex-shrink: 1;
-  max-width: 30%;
+  flex-grow: 1;
+  overflow-x: scroll;
   text-align: left;
+  height: 48px;
+  white-space: nowrap;
+  margin-right: 8px;
 }
 
-.songtitle {
-  font-size: 200%;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
+.songtitle {font-size: 200%;}
